--- a/index.html
+++ b/index.html
@@ -30,12 +30,13 @@
         </div>
       </header>
     </section>
-    <section>
-        <iframe width="1263.33px" height="710.623px" 
-  src="https://www.youtube.com/embed/xlCdna6PfAE?controls=0&rel=0&playsinline=1&enablejsapi=1&origin=https%3A%2F%2F" 
-  frameborder="0" allowfullscreen id="autoplay"
- ></iframe>
+    <section class="relative w-full" style="padding-top: 56.25%">
+      <iframe class="absolute inset-0 w-full h-full" 
+              src="https://www.youtube.com/embed/xlCdna6PfAE?controls=0&rel=0&playsinline=1&enablejsapi=1&autoplay=1" 
+              frameborder="0" allowfullscreen allow="autoplay"
+      ></iframe>
     </section>
+    
      
     <section class="text-gray-600 bg-white body-font">
         <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
